tests/rosetta/transpiler/C/bulls-and-cows-player.error
compile failed: exit status 1: /tmp/ctranspile95935920/bulls-and-cows-player.mochi.c: In function ‘_mem’:
/tmp/ctranspile95935920/bulls-and-cows-player.mochi.c:50:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   50 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile95935920/bulls-and-cows-player.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile95935920/bulls-and-cows-player.mochi.c: In function ‘makePatterns’:
/tmp/ctranspile95935920/bulls-and-cows-player.mochi.c:148:92: error: invalid operands to binary + (have ‘const char *’ and ‘const char *’)
  148 |                                 pats = list_append_str(pats, &pats_len, ((digits[(int)(i)] + digits[(int)(j)]) + digits[(int)(k)]) + digits[(int)(l)]);
      |                                                                           ~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~
      |                                                                                 |                  |
      |                                                                                 const char *       const char *

